--- a/cv_1.tex
+++ b/cv_1.tex
@@ -162,8 +162,8 @@ Postdoctoral Researcher, Yodh Biomedical Optics Lab, Philadelphia, PA
 \vspace{2pt} % Gap between title and text
 \begin{center}
 
-\begin{tabular}{c|c|c|c} Matlab & Labview & Python & C \\
-Solidworks & MS Office & Ubuntu & ImageJ  \end{tabular}
+\begin{tabular}{c|c|c|c|c} Matlab & Labview & Python & C &Solidworks\\
+ Comsol & MS Office & Ubuntu & ImageJ &\LaTeX \end{tabular}
 \end{center}
 
 %----------------------------------------------------------------------------------------
