Updated various Resumes
Created 3 resumes for different jobs.. check folders for details

--- a/CV_inverse problems/Coverletter.tex
+++ b/CV_inverse problems/Coverletter.tex
@@ -63,21 +63,21 @@ sorting=nyt
 
 
 Dear Hiring Manager,\\
-\vspace{2mm}
+\vspace{2mm} 
 
-I am Venkaiah Kavuri, postdoctoral researcher from Dr. Arjun Yodh\textquotesingle s lab in Department of Physics at University of Pennsylvania. I am writing in to express my interest \textbf{Research Scientist} position at your company. As a forward thinking postdoc, I am motivated to be part of several projects simultaneously by involving in different roles such as development, data processing/programing and testing. Areas of strength that will guide me in delivering successes towards meeting your organization's goals include  \textbf{Instrument Development, Scientific Programing, Signal Processing, Algorithm Development, Data mining, and Statistical Analysis.}\\
+I am Venkaiah Kavuri, postdoctoral researcher from Department of Physics at University of Pennsylvania. I am writing in to express my interest \textbf{Translational R\&D Analytics Specialist 1} position at your company. I am currently working in Dr. Arjun Yodh\textquotesingle s lab in Physics Department. As a forward thinking postdoc, I am motivated to be part of several projects simultaneously by involving in different roles such as development, programing and testing. Areas of strength that will guide me in delivering successes towards meeting your organization's goals include \textbf{Inverse problems, Large-scale Computing, Computational Methods, Algorithm Development, Data Processing, and Statistical Analysis.}\\
 \vspace{2mm} 
 
 
 Some of my technical proficiencies include:\\
 \begin{itemize}\itemsep -2pt
+\item Demonstrated record in biooptical modeling using problem-solving techniques such as numerical modeling, inverse problems and optimization.\\
 \item In-depth understanding of global and local optimization and a working knowledge of advanced signal processing techniques (such as, Kalman filtering and time-varying frequency analysis).\\
-\item Demonstrated record in biooptical modeling using problem-solving techniques such as numerical modeling, inverse problems, optimization and data mining.\\
 \item Skilled at designing, conducting and testing in vitro/in vivo experiments to thoroughly analyze device prototypes and develop commercially-viable product enhancements.\\
 \item Knowledgeable about Ultrasound physics and Photoacoustics.\\
 \end{itemize} 
 
-While working as a Postdoc at University of Pennsylvania; I originated, designed and built a optical flow measurement device to be used in Neural ICU for predicting recurrent stroke. I am also working on wearable blood flow measurement device(using Intel Edison) to be used for measuring blood flow in muscle. During my Phd at University of Texas Arlington, I applied statistical methods to develop a new technique for detecting and imaging early stages of aggressive prostate cancer by creating, engineering and building a TRUS-compatible DOT Probe. I also originated, designed and built multi-spectral, low-cost and portable DOT instrumentation then improved existing reconstruction methods by combining depth compensation algorithm and L1-regularized least squares method.\\
+While working as a Postdoc at University of Pennsylvania; I reconstructed breast cancer images using Diffuse Optical Tomography(DOT). I also explored Gauss-Newton, Levenberg-Marquardt and Conjugate gradient methods to find optimal results for locating cancer locations. I also originated, designed and built a optical flow measurement device to be used in Neural ICU.  During my Phd at University of Texas Arlington, I applied statistical methods to develop a new technique for detecting and imaging early stages of aggressive prostate cancer by creating, engineering and building a TRUS-compatible DOT Probe. I also originated, designed and built multi-spectral, low-cost and portable DOT instrumentation then improved existing reconstruction methods by combining depth compensation algorithm and L1-regularized least squares method.\\
 
 \vspace{2mm} 
 I welcome the opportunity to participate in a personal interview to answer your questions and better present my qualifications. I look forward to speaking with you soon.\\
