--- a/CV_inverse problems/cv_inverse.tex
+++ b/CV_inverse problems/cv_inverse.tex
@@ -37,7 +37,7 @@ defernumbers=true,
 style=ieee,
 sorting=nyt
 ]{biblatex}
-\addbibresource{cv_1}
+\addbibresource{cv_inverse}
 \nocite{*}
 
 
@@ -69,18 +69,18 @@ sorting=nyt
 \section{Summary of Qualifications}
 \begin{itemize}\itemsep 0pt
 
-\item Experienced with optical device designing and testing, which can be used to sense/measure biomarkers.
+\item Experienced working with inverse problems related to diffuse optical tomographic image reconstruction.
 
-\item Experienced with experimental design and human data collection in clinical environment. 
+\item In-depth understanding of global optimization techniques (Simulated Annealing Algorithm, Genetic Algorithm) and local optimization techniques (Gauss-Newton, Levenberg-Marquardt and Conjugate gradient methods) and their combinations.
 
-\item In-depth understanding of global optimization techniques (simulated annealing algorithm) and local optimization techniques (Levenberg-Marquardt algorithm) and their combinations.
+\item In-depth understanding of both $l_1$ norm and $l_2$  norm regularization techniques.  
 
-\item Experienced with Matlab, Python, SAS and SPSS scripting for performing statistical/predictive analysis.
+\item Familiar with several linear algebra techniques such as Singular Value Decomposition(SVD), LU decomposition and Eigenvalues. 
+
+\item Background of working with Matlab, Python, SAS and SPSS scripting for performing statistical/predictive analysis.
 
 \item Experienced with signal processing tools such as short time Fourier transform (STFT), wavelet transform, noise filtering and parameter estimation.
-
-\item Experienced with extracting weak signals from extremely noisy data using hardware (lock-in amplifiers) and software(PCA) techniques.    
-
+ 
 
 \end{itemize}
 \vspace{-7mm}
@@ -135,18 +135,18 @@ Bachelor of Technology in Biomedical Engineering \\
 \begin{flushleft}  
 
 \textbf{University of Pennsylvania}, Philadelphia, PA . \hfill October 2014 - Present \\ 
-\textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA
-\vspace{-2.5mm}
-\begin{itemize} \itemsep -2pt % Reduce space between items
+\textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA\\
+\vspace{-2.3mm}
+\begin{itemize} \itemsep 0mm % Reduce space between items
 \item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke. The instrument will be used to measure blood flow in prefrontal cortex of the brain using single photon counting techniques and diffuse auto-correlation techniques. 
-\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography.
+\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography. Explored Gauss-Newton, Levenberg-Marquardt and Conjugate gradient methods to find optimal results for locating cancer locations. 
 \item Supervised and trained new graduate students, undergraduate students and research assistants.  
 \end{itemize}
 
 \textbf{University of Texas Arlington}, Arlington, TX \hfill August 2010 - August 2014 \\
-\textbf{\textcolor{darkgray}{Graduate Research Assistant,} }Biomedical Optics Lab, Arlington, TX 
+\textbf{\textcolor{darkgray}{Graduate Research Assistant,} }Biomedical Optics Lab, Arlington, TX \\
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\vspace{-2.5mm}
+\vspace{-3mm}
 \item Developed a technique to detect and image early stages of aggressive prostate cancer by creating, engineering and building Transrectal Ultrasound (TRUS)-compatible Diffuse Optical Tomography (DOT) Probe (using SolidWorks), which increased sensitivity and specificity to detect prostate cancer. 
 
 \item Originated, designed and built multi-spectral, low-cost and portable DOT instrumentation (using basic electronic circuit design and signal processing) then improved existing reconstruction methods (enhanced depth localization and images) by combining depth compensation algorithm and L1-regularized least squares method.
