--- a/CV_finance/cv_finance.tex
+++ b/CV_finance/cv_finance.tex
@@ -22,7 +22,7 @@
 \documentclass{my_cv} 
 
 \usepackage{hyperref}
-\usepackage[letterpaper,bindingoffset=0.2in,left=0.75in,right=0.75in,top=0.5in,bottom=1in,footskip=0.4in]{geometry}
+\usepackage[letterpaper,bindingoffset=0.1in,left=0.75in,right=0.75in,top=0.75in,bottom=1in,footskip=0.4in]{geometry}
 
 \usepackage{marvosym}
 \usepackage{fontawesome}
@@ -40,12 +40,16 @@ sorting=nyt
 \addbibresource{cv_1}
 \nocite{*}
 
+\usepackage{footmisc}
 
-
+\pagenumbering{gobble}
 \usepackage{xcolor}
  \definecolor{linkedincolor}{HTML}{1683BB}
 \definecolor{facebookcolor}{HTML}{3b5998 }
 \definecolor{gscholarcolor}{HTML}{6699FF }
+
+
+
 
 %----------------------------------------------------------------------------------------
 %	YOUR NAME AND ADDRESS(ES) SECTION
@@ -57,7 +61,7 @@ sorting=nyt
 \vspace{-2mm}
 \begin{center} 
 \begin{footnotesize}
-\contact{4404 Walnut St., \# 3R}{Philadelphia, PA}{USA 19104}{\faEnvelope\,  \href{mailto:venk@sas.upenn.edu}{venk@sas.upenn.edu}}{\faMobilePhone\, (814) 431-2033}
+\contact{4404 Walnut St., \# 3R}{Philadelphia}{USA 19104}{\Email venk@sas.upenn.edu}{\textcolor{red}{\Mobilefone\,} (814) 431-2033}
 \end{footnotesize}
 
 \href{https://www.linkedin.com/in/venkaiahchowdarykavuri}{\textcolor{linkedincolor}{\faLinkedinSquare}} \href{https://github.com/Venki-Kavuri}{\faGithub} \href{https://scholar.google.com/citations?hl=en&user=r5E9ACIAAAAJ&view_op=list_works}{\textcolor{gscholarcolor}{\aiGoogleScholar}} \href{https://www.facebook.com/venki.kavuri}{\textcolor{facebookcolor}{\faFacebookOfficial}}
@@ -67,19 +71,17 @@ sorting=nyt
 \vspace{-9mm} 
 
 \section{Summary of Qualifications}
-\begin{itemize}\itemsep 0pt
+\begin{itemize}\itemsep -1mm
 
-\item Experienced with optical device designing and testing, which can be used to sense/measure biomarkers.
+\item In-depth understanding of global optimization techniques (Simulated Annealing Algorithm, Genetic Algorithm) and local optimization techniques (Gauss-Newton, Levenberg-Marquardt and Conjugate gradient methods) and their combinations.
 
-\item Experienced with experimental design and human data collection in clinical environment. 
-
-\item In-depth understanding of global optimization techniques (simulated annealing algorithm) and local optimization techniques (Levenberg-Marquardt algorithm) and their combinations.
+\item Familiar with several linear algebra techniques such as Singular Value Decomposition(SVD), LU decomposition and Eigenvalues. 
 
 \item Experienced with Matlab, Python, SAS and SPSS scripting for performing statistical/predictive analysis.
 
 \item Experienced with signal processing tools such as short time Fourier transform (STFT), wavelet transform, noise filtering and parameter estimation.
 
-\item Experienced with extracting weak signals from extremely noisy data using hardware (lock-in amplifiers) and software(PCA) techniques.    
+\item Leading a team of 5 for neural ICU(optical monitor) project at University of Pennsylvania. Lead a team of 4 for prostate cancer project at University of Texas Arlington.  
 
 
 \end{itemize}
@@ -97,29 +99,22 @@ sorting=nyt
 \begin{flushleft}  
 \textbf{University of Pennsylvania}, Philadelphia, PA  \hfill September 2014 - Present \\ 
 Postdoctoral Researcher in Department of Physics and Astronomy \\ 
-\vspace{-3mm}
-\begin{itemize}\itemsep -2pt
-\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during excersise.  
-\item Projects (completed): Breast cancer image reconstruction. 
-\item Advisor: Professor Arjun Yodh
-\item Areas of focus: Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
+\vspace{-2mm}
+\begin{itemize}\itemsep -5mm
+\item Projects:(1)Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during exercise. (3) Optical mamography.  
 \end{itemize}
-
-
+\vspace{-2.5mm}
 \textbf{University of Texas Arlington}, Arlington, TX \hfill August 2010 - August 2014 \\ 
 Doctor of Philosophy in Biomedical Engineering/Medical Imaging \\
-\vspace{-3mm}
+\vspace{-2mm}
 \begin{itemize}\itemsep -2pt
 \item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging
-\item Advisor: Professor Hanli Liu 
-\item Areas of focus: Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
 \end{itemize}
- 
+ \vspace{-2.5mm}
 \textbf{Jawaharlal Nehru Technological University}, Hyderabad, India \hfill September 2003 - May 2007\\
 Bachelor of Technology in Biomedical Engineering \\ 
-\vspace{-3mm}
+\vspace{-2mm}
 \begin{itemize}
-\setlength\itemsep{0em} 
 \item First class with distinction
 \end{itemize}
 \end{flushleft}  
@@ -132,26 +127,20 @@ Bachelor of Technology in Biomedical Engineering \\
 %----------------------------------------------------------------------------------------
 
 \section{Professional Experience}
+\vspace{2pt} 
 \begin{flushleft}  
 
 \textbf{University of Pennsylvania}, Philadelphia, PA . \hfill October 2014 - Present \\ 
-\textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA
-\vspace{-2.5mm}
+Postdoctoral Researcher, Yodh Biomedical Optics Lab, Philadelphia, PA
+\vspace{-2mm}
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke. The instrument will be used to measure blood flow in prefrontal cortex of the brain using single photon counting techniques and diffuse auto-correlation techniques. 
-\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography.
-\item Supervised and trained new graduate students, undergraduate students and research assistants.  
 \end{itemize}
-
-\textbf{University of Texas Arlington}, Arlington, TX \hfill August 2010 - August 2014 \\
-\textbf{\textcolor{darkgray}{Graduate Research Assistant,} }Biomedical Optics Lab, Arlington, TX 
+ \vspace{-2mm}
+\textbf{University of Texas Arlington}, Arlington, TX \hfill August 2010 - August 2014 \\ 
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \vspace{-2.5mm}
-\item Developed a technique to detect and image early stages of aggressive prostate cancer by creating, engineering and building Transrectal Ultrasound (TRUS)-compatible Diffuse Optical Tomography (DOT) Probe (using SolidWorks), which increased sensitivity and specificity to detect prostate cancer. 
-
 \item Originated, designed and built multi-spectral, low-cost and portable DOT instrumentation (using basic electronic circuit design and signal processing) then improved existing reconstruction methods (enhanced depth localization and images) by combining depth compensation algorithm and L1-regularized least squares method.
-
-\item Research work resulted in 2 peer-reviewed, 1st-authored journal papers. This produced further external funding for continuous development in detection/diagnosis of prostate cancer.
 
 \end{itemize}
 \end{flushleft}
@@ -188,26 +177,7 @@ MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
 \item ``TRUS-Integrated FD-DOI Multi-modal Imaging System for Prostate Cancer," US Provisional Patent Application Serial No. 61/985,905, April 2014. 
 \end{itemize}
 
-
 %----------------------------------------------------------------------------------------
-
-\vspace{-5mm} % Some whitespace between sections
-
-%----------------------------------------------------------------------------------------
-%	MEMBERSHIPS SECTION
-%----------------------------------------------------------------------------------------
-
-\section{{Memberships}} 
-
-\vspace{-2mm} % Reduce space between section title and contents
-
-\begin{itemize} \itemsep -2pt 
-\item Member, International Professional Society for Optics and Photonics Technology(SPIE).
-\item Member, Optical Society of America(OSA). 
-\item Member, Institute of Electrical and Electronics Engineers(IEEE). 
-\end{itemize}
-
-%-------------------------------------of---------------------------------------------------
 
 \vspace{-5mm} % Some whitespace between sections
 
@@ -219,26 +189,12 @@ MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
 
 \vspace{-5pt} % Reduce space between section title and contents
 \begin{itemize} \itemsep -2pt 
-\item STEM Full tuition assistantship, University of Texas Arlington. \\
-\item Outstanding Student Award - 2014, University of Texas Arlington. \\
+\item STEM Full tuition assistantship, University of Texas Arlington \\
+\item Outstanding Student Award -2014, University of Texas Arlington \\
 \end{itemize}
 %----------------------------------------------------------------------------------------
 
-\vspace{-7mm}  % Some whitespace between sections
 
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%----------------------------------------------------------------------------------------
 
-\section{{Publications}} 
-\vspace{-3mm}
-\printbibliography[title={Articles},type=article,heading=subbibliography]
-\vspace{-4mm}
-\printbibliography[title={Conference Publications},type=inproceedings,heading=subbibliography]
-\vspace{-4mm}
-\printbibliography[title={PhD Thesis},type=thesis,heading=subbibliography]
-
-%----------------------------------------------------------------------------------------
-
-\let\thefootnote\relax\footnotetext{Resume compiled on \today}
+\footnotetext{Resume compiled on \today} 
 \end{document}
