--- a/references.tex
+++ b/references.tex
@@ -1,18 +1,33 @@
-\let\nofiles\relax
-\documentclass[10pt]{res} % Use the res.cls style, the font size can be changed to 11pt or 12pt here
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Long Professional Curriculum Vitae
+% LaTeX Template
+% Version 1.1 (9/12/12)
+%
+% This template has been downloaded from:
+% http://www.latextemplates.com
+% Original author:
+% Rensselaer Polytechnic Institute (http://www.rpi.edu/dept/arc/training/latex/resumes/)
+%
+% Important note:
+% This template requires the res.cls file to be in the same directory as the
+% .tex file. The res.cls file provides the resume style used for structuring the
+% document.
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+%\let\nofiles\relax
+\documentclass{my_cv} 
 
-\usepackage{helvet} % Default font is the helvetica postscript font
-%\usepackage{newcent} % To change the default font to the new century schoolbook postscript font uncomment this line and comment the one above
+\usepackage{hyperref}
+\usepackage[letterpaper,bindingoffset=0.2in,left=0.75in,right=0.75in,top=0.5in,bottom=1in,footskip=0.4in]{geometry}
 
-\usepackage{tgpagella}
-\usepackage[T1]{fontenc}
-\usepackage[letterpaper,bindingoffset=0.2in,left=0.75in,right=0.75in,top=0.5in,bottom=0.5in,footskip=.25in]{geometry}
-\usepackage{blindtext}
-\usepackage{fontawesome}
-\usepackage{fontspec}
 \usepackage{marvosym}
-
+\usepackage{fontawesome}
+\usepackage{academicons}
+\usepackage[document]{ragged2e}
 
 \usepackage[backend=bibtex,
 style=numeric,
@@ -26,38 +41,59 @@ sorting=nyt
 \nocite{*}
 
 
-\newsectionwidth{0pt} % Stops section indenting
-
 %----------------------------------------------------------------------------------------
 %	YOUR NAME AND ADDRESS(ES) SECTION
 %----------------------------------------------------------------------------------------
-%\setlength{\parindent}{0pt}
+\setlength{\parindent}{0.5cm}
 \begin{document}
 
+\name{\textsc{Venkaiah Chowdary Kavuri}}
+\vspace{-2mm}
+\begin{center} 
+\begin{footnotesize}
+\contact{4404 Walnut St., \# 3R}{Philadelphia}{USA 19104}{\Email venk@sas.upenn.edu}{\Mobilefone\, (814) 431-2033}
+\end{footnotesize}
 
-%\sffamily%
-{\small\begin{tabular}[c]{l}
- 4404 Walnut St, APT 3R\\
- Philadelphia, PA 19104 \\
-\end{tabular}}\hfill%
-{\Large\bfseries\begin{tabular}[c]{c}
-VENKAIAH C. KAVURI
-\end{tabular}}\hfill%
-{\small\begin{tabular}[c]{r}
-\Telefon (215) 898-5148 \\
-\Mobilefone (814) 431-2033 \\
-\Email venk@sas.upenn.edu\\
-\faLinkedinSign\,\faGithub
-\end{tabular}}%%
-\vspace{0.05in} 
-\rule{\textwidth}{1pt}
-%----------------------------------------------------------------------------------------
+\href{https://www.linkedin.com/in/venkaiahchowdarykavuri}{\faLinkedinSquare} \href{https://github.com/Venki-Kavuri}{\faGithub} \href{https://scholar.google.com/citations?hl=en&user=r5E9ACIAAAAJ&view_op=list_works}{\aiGoogleScholar} \href{https://www.facebook.com/venki.kavuri}{\faFacebookOfficial}
+\end{center} 
 
-\begin{resume}
-\vspace{-7mm} 
+\textbf{References}
+\vspace{5mm} 
 
 
+\textbf{Prof. Arjun Yodh}\\
+The Laboratory for Research on the Structure of Matter\\ 
+University of Pennsylvania\\
+3231 Walnut Street\\
+Philadelphia, PA 19104-6202\\
+\Email\, yodh@physics.upenn.edu\\	
+\Telefon\, (215) 898-8571\\
+
+\vspace{20mm} 
+
+\textbf{Prof. Hanli Liu}\\
+University of Texas Arlington\\ 
+ERB, RM 234\\
+500 UTA BLVD\\ 
+Arlington, TX 27109\\
+\Email\, hanli@uta.edu\\	
+\Telefon\, (817) 272-2054\\
+
+\vspace{20mm} 
+
+\textbf{Dr. Martin Schweiger}\\
+University College London\\
+Dept. of Computer Science\\
+Gower Street\\
+London WC1E 6BT\\
+United Kingdom\\
+\Email\, M.Schweiger@cs.ucl.ac.uk\\	
+\Telefon\, +44 (0)20 7679 7213\\
 
 
-\end{resume} 
+
+\vspace{5mm} 
+
+
+
 \end{document}
