--- a/CV_Optical_Spectroscopy/Coverletter.tex
+++ b/CV_Optical_Spectroscopy/Coverletter.tex
@@ -71,10 +71,9 @@ I am Venkaiah Kavuri, postdoctoral researcher from Dr. Arjun Yodh\textquotesingl
 
 Some of my technical proficiencies include:\\
 \begin{itemize}\itemsep -2pt
-\item In-depth understanding of global and local optimization and a working knowledge of advanced signal processing techniques (such as, Kalman filtering and Time-varying frequency analysis).\\
-\item Demonstrated record in biooptical modeling using problem-solving techniques such as Numerical modeling, Imaging-Inverse problems, Imaging-Optimization and Data mining.\\
-\item Skilled at designing, conducting and testing in vitro/in vivo experiments to thoroughly analyze device prototypes and develop commercially-viable product enhancements.\\
-\item Knowledgeable about Ultrasound physics and Photoacoustics.\\
+\item Designing, conducting and testing of optical device prototypes and develop commercially-viable product enhancements.\\
+\item Demonstrated record in optical modeling using problem-solving techniques such as Numerical modeling, Imaging-Inverse problems, Imaging-Optimization and Data mining.\\
+
 \end{itemize} 
 
 While working as a Postdoc at University of Pennsylvania; I originated, designed and built an optical flow measurement device to be used in Neural ICU for predicting recurrent stroke. I am also working on wearable blood flow measurement device(using Intel Edison) to be used for measuring blood flow in muscle. During my Phd at University of Texas Arlington, I applied statistical methods to develop a new technique for detecting and imaging early stages of aggressive prostate cancer by creating, engineering and building a TRUS-compatible DOT Probe. I also originated, designed and built multi-spectral, low-cost and portable DOT instrumentation then improved existing image reconstruction methods by combining depth compensation algorithm and L1-regularized least squares method.\\
