--- a/CV_inverse problems/cv_inverse.tex
+++ b/CV_inverse problems/cv_inverse.tex
@@ -69,7 +69,7 @@ sorting=nyt
 \section{Summary of Qualifications}
 \begin{itemize}\itemsep 0pt
 
-\item Experienced working with inverse problems related to diffuse optical tomographic image reconstruction.
+\item Experienced working with inverse problems related to Diffuse Optical Tomographic image reconstruction.
 
 \item In-depth understanding of global optimization techniques (Simulated Annealing Algorithm, Genetic Algorithm) and local optimization techniques (Gauss-Newton, Levenberg-Marquardt and Conjugate gradient methods) and their combinations.
 
@@ -79,7 +79,7 @@ sorting=nyt
 
 \item Background of working with Matlab, Python, SAS and SPSS scripting for performing statistical/predictive analysis.
 
-\item Experienced with signal processing tools such as short time Fourier transform (STFT), wavelet transform, noise filtering and parameter estimation.
+\item Experienced with signal processing tools such as Short time Fourier transform (STFT), Wavelet transform, noise filtering and parameter estimation.
  
 
 \end{itemize}
@@ -99,7 +99,7 @@ sorting=nyt
 Postdoctoral Researcher in Department of Physics and Astronomy \\ 
 \vspace{-3mm}
 \begin{itemize}\itemsep -2pt
-\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during excersise.  
+\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during workout.  
 \item Projects (completed): Breast cancer image reconstruction. 
 \item Advisor: Professor Arjun Yodh
 \item Areas of focus: Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
