--- a/CV_product design/cv_1product.tex
+++ b/CV_product design/cv_1product.tex
@@ -69,24 +69,14 @@ sorting=nyt
 \section{Summary of Qualifications}
 \begin{itemize}\itemsep 0pt
 
-\item Experienced with non-invasive optical device designing and testing, which can be used to sense/image biomarkers.
-
-\item In-depth understanding 3D image reconstruction algorithms(inverse problems) and their combinations.
-
-\item Experimental design and human data collection in clinical environment. 
-
-\item Programing - Matlab, Labview, Solidworks, Python, SAS and SPSS.
-
-\item Signal processing tools - Short time Fourier transform (STFT), Wavelet transform, Kalman filtering.
-
-\item Experienced with extracting weak signals from extremely noisy data using hardware (lock-in amplifiers) and software(PCA) techniques.    
-
-
+\item Optical device instrumentation and characterization - Lasers, Optoelectronics and CCD cameras. 
+\item Deep understanding of the fundamental physics of light-optical modeling/simulation/optimization.
+\item Instrument control and data processing- LabVIEW, MATLAB, Python, and SOLIDWORKS. 
+\item Statistics- Design of Experiments, SAS and SPSS.
+\item Electronic circuit design- PSpice.
+\item Signal processing tools- Short time Fourier transform, Wavelet transform, Noise filtering and Parameter estimation.
 \end{itemize}
 \vspace{-7mm}
-
-
-
 
 
 %----------------------------------------------------------------------------------------
@@ -97,22 +87,22 @@ sorting=nyt
 \begin{flushleft}  
 \textbf{University of Pennsylvania}, Philadelphia, PA  \hfill October 2014 - Present \\ 
 Postdoctoral Researcher in Department of Physics and Astronomy \\ 
-\vspace{-3mm}
+\vspace{-2.5mm}
 \begin{itemize}\itemsep -2pt
-\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during excersise.  
-\item Projects (completed): Optical 3D image reconstruction(using Finite Element Methods and solving Inverse problems) of human breast cancer from 2D camera images. 
-\item Advisor: Professor Arjun Yodh.
-\item Areas of focus: Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
+\item Projects in progress: Time-domain and Frequency-domain(100MHz) Optical instrumentation (stroke measurements) for Neural ICU.   
+\item Completed projects: Optical 3D image reconstruction (inverse problem) of human breast cancer from 2D camera images. 
+\item Advisor: Professor Arjun Yodh
+\item Areas of focus: Optical Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image Reconstruction.
 \end{itemize}
 
 
 \textbf{University of Texas Arlington}, Arlington, TX \hfill January 2008 - August 2014 \\ 
-Doctor of Philosophy in Biomedical Engineering/Medical Imaging \\
-\vspace{-3mm}
+Doctor of Philosophy in Biomedical Engineering (Medical Imaging-Biomedical Optics) \\
+\vspace{-2.5mm}
 \begin{itemize}\itemsep -2pt
-\item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging
-\item Advisor: Professor Hanli Liu. 
-\item Areas of focus: Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
+\item Dissertation -  Development of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging.
+\item Advisor: Professor Hanli Liu 
+\item Areas of focus: Optical Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
 \end{itemize}
  
 \textbf{Jawaharlal Nehru Technological University}, Hyderabad, India \hfill September 2003 - May 2007\\
@@ -120,7 +110,7 @@ Bachelor of Technology in Biomedical Engineering \\
 \vspace{-3mm}
 \begin{itemize}
 \setlength\itemsep{0em} 
-\item First class with distinction
+\item First class with distinction.
 \end{itemize}
 \end{flushleft}  
 %----------------------------------------------------------------------------------------
@@ -138,8 +128,8 @@ Bachelor of Technology in Biomedical Engineering \\
 \textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA
 \vspace{-2.5mm}
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke. The instrument will be used to measure blood flow in prefrontal cortex of the brain using single photon counting techniques and diffuse auto-correlation techniques. 
-\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography.
+\item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke using single photon counting detectors and long coherence length lasers. 
+\item Image processing and reconstruction of breast cancer images (using diode lasers and gain modulated, image intensified CCD camera) using Diffuse Optical Tomography (optical 3D mammogram).
 \item Supervised and trained new graduate students, undergraduate students and research assistants.  
 \end{itemize}
 
@@ -147,7 +137,7 @@ Bachelor of Technology in Biomedical Engineering \\
 \textbf{\textcolor{darkgray}{Graduate Research Assistant,} }Biomedical Optics Lab, Arlington, TX 
 \begin{itemize} \itemsep -2pt % Reduce space between items
 \vspace{-2.5mm}
-\item Developed a technique to detect and image early stages of aggressive prostate cancer by creating, engineering and building Transrectal Ultrasound (TRUS)-compatible Diffuse Optical Tomography (DOT) Probe (using SolidWorks), which increased sensitivity and specificity to detect prostate cancer. 
+\item Developed a technique to detect and image early stages of aggressive prostate cancer by creating, engineering and building Trans-rectal Ultrasound (TRUS)-compatible Diffuse Optical Tomography (DOT) Probe (using SolidWorks), which increased sensitivity and specificity to detect prostate cancer. 
 
 \item Originated, designed and built multi-spectral, low-cost and portable DOT instrumentation (using basic electronic circuit design and signal processing) then improved existing reconstruction methods (enhanced depth localization and images) by combining depth compensation algorithm and L1-regularized least squares method.
 
@@ -169,8 +159,23 @@ Bachelor of Technology in Biomedical Engineering \\
 \vspace{2pt} % Gap between title and text
 \begin{center}
 
-\begin{tabular}{c|c|c|c|c|c} Matlab & Labview & Python & C &Solidworks &Comsol \\
+\begin{tabular}{c|c|c|c|c|c} Matlab & LabVIEW& Python & C &SOLIDWORKS &Comsol \\
 MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
+\end{center}
+
+
+\vspace{-7mm}  % Some whitespace between sections
+%----------------------------------------------------------------------------------------
+%	EQUIPMENT SKILLS SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Equipment Skills}
+
+\vspace{2pt} % Gap between title and text
+\begin{center}
+
+\begin{tabular}{c|c|c|c|c} Oscilloscopes & Spectrum Analyzers & RF Electronics (100-200MHz) & Lock-in Amplifiers &Spectrometers\\
+Lasers \& LEDs & Optoelectronics &Photon Counting &DAQ boards &Free Space Optics\end{tabular}
 \end{center}
 
 %----------------------------------------------------------------------------------------
@@ -231,12 +236,10 @@ MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
 %----------------------------------------------------------------------------------------
 
 \section{{Publications}} 
-\vspace{-3mm}
+\vspace{-5pt} 
 \printbibliography[title={Articles},type=article,heading=subbibliography]
-\vspace{-4mm}
+\vspace{-6mm}
 \printbibliography[title={Conference Publications},type=inproceedings,heading=subbibliography]
-\vspace{-4mm}
-\printbibliography[title={PhD Thesis},type=thesis,heading=subbibliography]
 
 %----------------------------------------------------------------------------------------
 
