--- a/CV_Optical_Spectroscopy/cv_1product.tex
+++ b/CV_Optical_Spectroscopy/cv_1product.tex
@@ -69,24 +69,14 @@ sorting=nyt
 \section{Summary of Qualifications}
 \begin{itemize}\itemsep 0pt
 
-\item Experienced with non-invasive optical device designing and testing, which can be used to sense/image biomarkers.
-
-\item In-depth understanding 3D image reconstruction algorithms(inverse problems) and their combinations.
-
-\item Experimental design and human data collection in clinical environment. 
-
-\item Programing - Matlab, Labview, Solidworks, Python, SAS and SPSS.
-
-\item Signal processing tools - Short time Fourier transform (STFT), Wavelet transform, Kalman filtering.
-
-\item Experienced with extracting weak signals from extremely noisy data using hardware (lock-in amplifiers) and software(PCA) techniques.    
-
-
+\item Optical device designing(imaging/sensing) and characterization-Lasers, Optoelectronics and CCD cameras. 
+\item Proficient in optical sensing techniques- Absorption(Spectroscopy), Scattering, Polarization, Coherence, Surface plasmon resonance and Surface-enhanced Raman scattering.
+\item Deep understanding of the fundamental physics of light-optical modeling/simulation/optimization.
+\item Instrument control and data processing- LabVIEW, MATLAB, Python, and SOLIDWORKS. 
+\item Statistics- Design of Experiments, SAS and SPSS.
+\item Signal processing tools- Short time Fourier transform, Wavelet transform, Noise filtering and Parameter estimation.
 \end{itemize}
 \vspace{-7mm}
-
-
-
 
 
 %----------------------------------------------------------------------------------------
@@ -99,20 +89,20 @@ sorting=nyt
 Postdoctoral Researcher in Department of Physics and Astronomy \\ 
 \vspace{-3mm}
 \begin{itemize}\itemsep -2pt
-\item Projects (in progress): (1) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during excersise.  
-\item Projects (completed): Optical 3D image reconstruction(using Finite Element Methods and solving Inverse problems) of human breast cancer from 2D camera images. 
-\item Advisor: Professor Arjun Yodh.
-\item Areas of focus: Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image reconstruction.
+\item Projects (in progress): (1) Time-domain and Frequency-domain(100MHz) Optical instrumentation (stroke measurements) for Neural ICU. (2) Wearable optical flow measurement device design for muscle during exercise.  
+\item Projects (completed): Optical 3D image reconstruction(inverse problem) of human breast cancer from 2D camera images. 
+\item Advisor: Professor Arjun Yodh
+\item Areas of focus: Optical Instrument Design, Clinical Measurements, Diffuse Optical Tomography, Diffuse Coherence Spectroscopy and Image Reconstruction.
 \end{itemize}
 
 
 \textbf{University of Texas Arlington}, Arlington, TX \hfill January 2008 - August 2014 \\ 
-Doctor of Philosophy in Biomedical Engineering/Medical Imaging \\
+Doctor of Philosophy in Biomedical Engineering(Medical Imaging-Biomedical Optics) \\
 \vspace{-3mm}
 \begin{itemize}\itemsep -2pt
-\item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging
-\item Advisor: Professor Hanli Liu. 
-\item Areas of focus: Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
+\item Dissertation -  Development Of Trans-rectal Ultrasound (TRUS) Coupled Diffuse Optical Tomography (DOT) For Prostate Cancer Imaging.
+\item Advisor: Professor Hanli Liu 
+\item Areas of focus: Optical Probe Design, Clinical Measurements, Image Reconstruction and Image Processing.
 \end{itemize}
  
 \textbf{Jawaharlal Nehru Technological University}, Hyderabad, India \hfill September 2003 - May 2007\\
@@ -120,7 +110,7 @@ Bachelor of Technology in Biomedical Engineering \\
 \vspace{-3mm}
 \begin{itemize}
 \setlength\itemsep{0em} 
-\item First class with distinction
+\item First class with distinction.
 \end{itemize}
 \end{flushleft}  
 %----------------------------------------------------------------------------------------
@@ -138,8 +128,8 @@ Bachelor of Technology in Biomedical Engineering \\
 \textbf{\textcolor{darkgray}{Postdoctoral Researcher,} }Yodh Biomedical Optics Lab, Philadelphia, PA
 \vspace{-2.5mm}
 \begin{itemize} \itemsep -2pt % Reduce space between items
-\item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke. The instrument will be used to measure blood flow in prefrontal cortex of the brain using single photon counting techniques and diffuse auto-correlation techniques. 
-\item Image processing and reconstruction of breast cancer images using Diffuse Optical Tomography.
+\item Designed a non-invasive cerebral blood flow instrument to be used in neural ICU for predicting recurrent stroke using single photon counting detectors and long coherence length lasers. 
+\item Image processing and reconstruction of breast cancer images(using diode lasers and gain modulated, image intensified CCD camera) using Diffuse Optical Tomography(optical 3D mamogram).
 \item Supervised and trained new graduate students, undergraduate students and research assistants.  
 \end{itemize}
 
@@ -171,6 +161,21 @@ Bachelor of Technology in Biomedical Engineering \\
 
 \begin{tabular}{c|c|c|c|c|c} Matlab & Labview & Python & C &Solidworks &Comsol \\
 MS Office& Ubuntu & ImageJ &\LaTeX &SAS &SPSS\end{tabular}
+\end{center}
+
+
+\vspace{-7mm}  % Some whitespace between sections
+%----------------------------------------------------------------------------------------
+%	EQUIPMENT SKILLS SECTION
+%----------------------------------------------------------------------------------------
+
+\section{Equipment Skills}
+
+\vspace{2pt} % Gap between title and text
+\begin{center}
+
+\begin{tabular}{c|c|c|c|c} Oscilloscopes & Spectrum Analyzers & RF Electronics (100-200MHz) & Lock-in Amplifiers &Spectrometers\\
+Lasers \& LEDs & Optoelectronics &Photon Counting  &DAQ boards &Free Space Optics\end{tabular}
 \end{center}
 
 %----------------------------------------------------------------------------------------
